# gen/main/java/testapi/defaults/ResponseApi.java
@@ -18,6 +18,7 @@ public interface ResponseApi {
 	java.lang.String PATH_SINGLE = "/response/single";
 	java.lang.String PATH_VOID_FOUND = "/response/void";
 	java.lang.String PATH_VOID_NOT_FOUND = "/response/void-not-found";
+	java.lang.String PATH_WITH_DEFAULT = "/response/default";
 
 	@io.micronaut.http.annotation.Get("/response/array-complex")
 	@io.micronaut.http.annotation.Produces({ "application/json" })
@@ -101,4 +102,7 @@ public interface ResponseApi {
 			@io.micronaut.core.annotation.NonNull
 			@io.micronaut.http.annotation.QueryValue(value = "found")
 			java.lang.Boolean found);
+
+	@io.micronaut.http.annotation.Get("/response/default")
+	io.micronaut.http.HttpResponse<Object> withDefault();
 }
