# gen/main/java/testapi/packages/api/ResponseApiClient.java
@@ -20,6 +20,7 @@ public interface ResponseApiClient {
 	java.lang.String PATH_SINGLE = "/response/single";
 	java.lang.String PATH_VOID_FOUND = "/response/void";
 	java.lang.String PATH_VOID_NOT_FOUND = "/response/void-not-found";
+	java.lang.String PATH_WITH_DEFAULT = "/response/default";
 
 	@io.micronaut.http.annotation.Get("/response/array-complex")
 	@io.micronaut.http.annotation.Consumes({ "application/json" })
@@ -103,4 +104,7 @@ public interface ResponseApiClient {
 			@io.micronaut.core.annotation.NonNull
 			@io.micronaut.http.annotation.QueryValue(value = "found")
 			java.lang.Boolean found);
+
+	@io.micronaut.http.annotation.Get("/response/default")
+	io.micronaut.http.HttpResponse<Object> withDefault();
 }
