# src/it/test-api-async-reactor-generic/src/main/java/codegen/server/ResponseController.java
@@ -110,4 +110,9 @@ public class ResponseController implements ResponseApi {
 		}
 		return multipleResponseCodes(redirect);
 	}
+
+	@Override
+	public Mono<HttpResponse<Object>> withDefault() {
+		return Mono.just(HttpResponse.noContent());
+	}
 }
