# src/it/test-api-async-rxjava2-generic/src/main/java/codegen/server/ResponseController.java
@@ -110,4 +110,9 @@ public class ResponseController implements ResponseApi {
 		}
 		return multipleResponseCodes(redirect);
 	}
+
+	@Override
+	public Single<HttpResponse<Object>> withDefault() {
+		return Single.just(HttpResponse.noContent());
+	}
 }
